imagem de fundo

--- a/Desenvolvimento Front-End/src/login.html
+++ b/Desenvolvimento Front-End/src/login.html
@@ -11,6 +11,9 @@
 
 
     <div class="container">
+        <div class="image-container">
+            <img src="../img/4881929-Photoroom.png" alt="Imagem de exemplo">
+        </div>
         <div class="cadastro">
             <div>
                 <h1>Login</h1>
@@ -21,7 +24,7 @@
                     <input type="password" id="senha" name="senha" placeholder="Senha" required><br>
                     <div class="cont"><button type="submit" id="entrar">Entrar</button></div>
                 </form>
-                <p>Não tem uma conta? <a href="cadastro1.html">Cadastre-se aqui</a></p>               
+                <p>Não tem uma conta? <br> <a href="cadastro1.html">Cadastre-se aqui</a></p>               
             </div>
             
         </div>
