--- a/Desenvolvimento Front-End/src/cadastro1.html
+++ b/Desenvolvimento Front-End/src/cadastro1.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="image-container">
+            <img src="../img/4881929-Photoroom.png" alt="Imagem de exemplo">
+        </div>
         <div class="cadastro">
             <div>
                 <p class="mini" id="etapa">Etapa 1 de 2</p>
@@ -25,8 +28,6 @@
                     <div class="cont"><a href="cadastro2.html" id="continuar">Continuar</a></div>
                 </form>
             </div>
-            
-        </div>
     </div>
 
     <script>
