--- a/Desenvolvimento Front-End/src/cadastro2.html
+++ b/Desenvolvimento Front-End/src/cadastro2.html
@@ -12,14 +12,17 @@
 
 
     <div class="container">
+        <div class="image-container">
+            <img src="../img/4881929-Photoroom.png" alt="Imagem de exemplo">
+        </div>
         <div class="cadastro">
             <div>
-                <a href="cadastro1.html" id="voltar"><img src="../img/left-arrow_614865 (3).png" alt=""></a>
+                <a href="cadastro1.html" id="voltar"><img src="../img/up-left-arrow (7).png" alt=""></a>
                 <p class="mini">Etapa 2 de 2</p>
                 <h1>Criando Conta</h1>
                 <p class="mini">Já tem uma conta? <a href="login.html">Faça login aqui</a></p>
                 <form id="cadastroForm" action="/submit" method="POST">
-                    <p class="primeiro">Email</p>
+                    <p class="primeiro2">Email</p>
                     <input type="email" id="email" name="email" placeholder="Email" required><br>
                     <p>Senha</p>
                     <input type="password" id="senha" name="senha" placeholder="Senha" required><br>
