--- a/Desenvolvimento Front-End/src/cadastro2.html
+++ b/Desenvolvimento Front-End/src/cadastro2.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="image-container">
-            <img src="../img/4881929-Photoroom.png" alt="Imagem de exemplo">
+            <img src="../img/fundo1.png" alt="Imagem de exemplo">
         </div>
         <div class="cadastro">
             <div>
