--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -1,31 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="estilos/cadastro.css">
+    <link rel="stylesheet" href="estilos/telas-cadastros.css">
 
 </head>
 <body>
+
     <div class="container">
+
         <div class="image-container">
-            <img src="../img/fundo1.png" alt="Imagem de exemplo">
+            <img src="../img/fundo-1.png" alt="Imagem de exemplo">
         </div>
-        <div class="cadastro">
+
+        <div class="cadastro-container">
             <div>
-                <p class="mini" id="etapa">Etapa 1 de 2</p>
+                <p class="texto-mini" id="etapa">Etapa 1 de 2</p>
+
                 <h1>Criando Conta</h1>
-                <p class="mini">Já tem uma conta? <a href="login.html">Faça login aqui</a></p>
+
+                <p class="texto-mini">Já tem uma conta? <a href="login.html">Faça login aqui</a></p>
+
                 <form id="cadastroForm" action="/submit" method="POST">
-                    <p class="primeiro">Nome</p>
+
+                    <p>Nome</p>
                     <input type="text" id="nome" name="nome" placeholder="Nome Completo" required><br>
+
                     <p>CPF ou CNPJ</p>
                     <input type="text" name="cpf" id="cpf" placeholder="CPF/CNPJ" required>
+
                     <p>Endereço</p>
                     <input type="text" id="endereco" name="endereco" placeholder="Endereço" required> <br>
-                    <div class="cont"><a href="cadastro2.html" id="continuar">Continuar</a></div>
+
+                    <div class="mini-container"><a href="cadastro-2.html"id="botao-continuar">Continuar</a></div>
+                    
                 </form>
             </div>
     </div>
