--- a/Desenvolvimento Front-End/src/duvidas.html
+++ b/Desenvolvimento Front-End/src/duvidas.html
@@ -5,8 +5,8 @@
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
     <title>duvidas</title>
-    <link rel="stylesheet" href="estilos/duvidas.css">
-    <link rel="stylesheet" href="estilos/index.css">
+    <link rel="stylesheet" href="duvidas.css">
+    <link rel="stylesheet" href="index.css">
 
 </head>
 <body>
