--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -4,40 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAC - Página Inicial</title>
+    <link rel="stylesheet" href="index.css">
     <link href="./output.css" rel="stylesheet">
-    
-    <style>
-        @font-face {
-            font-family: 'alfa';
-            src: url(../../fontes/AlfaSlabOne-Regular.ttf);
-            font-weight: normal;
-        }
-
-        @font-face {
-            font-family: 'alexandria';
-            src: url(../../fontes/Alexandria-VariableFont_wght.ttf);
-            font-weight: normal;
-        }
-
-
-        :root {
-            --corFundo1: #b9f6be;
-            --corFundo2: #83e88a;
-            --corFundo2: #afd6ec;
-            --corDestaque: #299431;
-            --corTexto: #333;
-            --corMiniTexto: #696868;
-            --corLinks: #5e17eb;
-
-            --fontDestaque: 'alfa', serif, cursive;
-            --fontPadrão: 'alexandria', Arial, sans-serif;
-        }
-
-    </style>
 
 </head>
-<body class="bg-emerald-600">
-    <nav class="bg-amber-50 py-4 px-6 text-center">
+<body class="bg-[var(--fundo3)] ">
+    <nav class="bg-amber-50 py-4 px-6 text-center ">
+
         <div>
             <div>
                 <a href="postagens.html" class="px-8">Postagens</a>
