--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -44,15 +44,16 @@
             </div>
         </section>
         
-        <div class="importance-section">
-            <div class="image-box"><img src="../img/image.png" alt="necessitados"></div>
-            <div class="text-box">
-                <h2>Importância de Doar</h2>
-                <p>Texto explicando a importância de doações. 
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequuntur nobis, consectetur nulla iure eos similique esse optio rerum consequatur tenetur quo veniam reprehenderit, libero ullam voluptatibus voluptatum perspiciatis harum?
+        <section class="w-vw h-dvh bg-(--fundo2) flex items-center justify-center gap-40 px-30">
+            <div class="w-130">
+                <img src="../img/donation.webp" alt="necessitados">
+            </div>
+            <div class="">
+                <h2 class="text-5xl text-(--destaque) font-destaque">Importância de Doar</h2>
+                <p class="m-4 ml-0 w-120 text-(--destaque) text-2xl">Texto explicando a importância de doações. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequuntur nobis, consectetur nulla iure eos similique esse optio rerum consequatur Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet enim eligendi non 
                 </p>
             </div>
-        </div>
+        </section>
         
         <h1 class="titulo">Postagens mais importantes</h1>
 
