--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="telas-cadastros.css">
+    <link rel="stylesheet" trem="index.css">
 
 </head>
 <body>
@@ -25,7 +25,7 @@
 
                 <p class="texto-mini">Já tem uma conta? <a href="login.html">Faça login aqui</a></p>
 
-                <form id="cadastroForm" action="/submit" method="POST">
+                <form id="cadastroForm" action="submit" method="POST">
 
                     <p>Nome</p>
                     <input type="text" id="nome" name="nome" placeholder="Nome Completo" required><br>
@@ -42,30 +42,8 @@
             </div>
     </div>
 
-    <script>
-        document.getElementById('cadastroForm').addEventListener('submit', function(event) {
-            const nome = document.getElementById('nome').value;
-            const email = document.getElementById('email').value;
-            const senha = document.getElementById('senha').value;
-            const cpf = document.getElementById('cpf').value;
-            const endereco = document.getElementById('endereco').value;
-            const tipo = document.getElementById('tipo').value;
-
-            if (!nome || !cpf) {
-                alert('Por favor, preencha todos os campos.');
-                event.preventDefault();
-                return;
-            }
-
-            // if (!nome || !email || !senha || !endereco || !tipo) {
-            //     alert('Por favor, preencha todos os campos.');
-            //     event.preventDefault();
-            //     return;
-            // }
-
-            alert('Cadastro realizado com sucesso!');
-        });
-    </script>
+    <script src="crud.js"></script>
+    <script src="cadastro.js"></script>
 </body>
 </html>
 
@@ -79,4 +57,5 @@
                     <option value="doador">Quero ser doador</option>
                     <option value="ajuda">Preciso de ajuda</option>
                 </select><br> -->
+
 
