--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAC - Página Inicial</title>
-    <link rel="stylesheet" href="index.css">
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     
@@ -84,7 +83,7 @@
                 </div>
         </section>
 
-        <aside class="w-vw h-dvh bg-(--fundo2) flex items-center justify-center gap-10 px-30 flex-col rounded-4xl rounded-b-none">
+        <aside class="w-vw h-dvh bg-fundo2 flex items-center justify-center gap-10 px-30 flex-col rounded-4xl rounded-b-none">
                     <p class="text-[32px]  w-100 text-center">Veja mais postagens e publique se cadastrando</p>
                     <p class="text-2xl text-center py-5 px-5 bg-[#24792a] duration-500 text-gray-200 rounded-xl hover:bg-[#1bb125] hover:text-amber-50 hover:scale-175 "><a  href="cadastro-1.html">Cadastre-se</a></p>
         </aside>
