--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -8,7 +8,7 @@
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     
-    <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
+    <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch .-->
 
 </head>
 <body class="bg-amber-50 font-alexandria flex justify-center">
