--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro</title>
-    <link href="./output.css" rel="stylesheet">
-    <link href="./input.css" rel="stylesheet">
+    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" trem="index.css">
     
     <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch .-->
 
