--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -44,7 +44,8 @@
         </div>
     </div>
 
-    <script src="cadastro2.js"></script>
+    <script src="crud.js"></script>
+    <script src="javascript/cadastro-2.js"></script>
     
 </body>
 </html>
