--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -15,7 +15,7 @@
 
     <div class="w-full h-full max-h-dvh flex justify-center">
 
-        <div class="" >
+        <div>
             <img class="w-full h-full" src="../img/fundo-1.png" alt="Imagem de exemplo">
         </div>
         
@@ -32,15 +32,15 @@
                 <form id="cadastroForm" action="/submit" method="POST">
 
                     <p class="mt-10 mb-1">Nome</p>
-                    <input class="bg-amber-50 indent-1 rounded-md mb-5" type="text" id="nome" name="nome" placeholder="Nome Completo" required><br>
+                    <input class="bg-amber-50 indent-1 p-1  rounded-md mb-5" type="text" id="nome" name="nome" placeholder="Nome Completo" required><br>
 
                     <p class="mt-4 mb-1">CPF ou CNPJ</p>
-                    <input class="bg-amber-50 indent-1 rounded-md mb-5" type="text" name="cpf" id="cpf" placeholder="CPF/CNPJ" required>
+                    <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="text" name="cpf" id="cpf" placeholder="CPF/CNPJ" required>
 
                     <p class="mt-4 mb-1">Endereço</p>
-                    <input class="bg-amber-50 indent-1 rounded-md mb-5" type="text" id="endereco" name="endereco" placeholder="Endereço" required> <br>
+                    <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="text" id="endereco" name="endereco" placeholder="Endereço" required> <br>
 
-                    <div class="mt-10 px-4 py-3 bg-destaque rounded-2xl inline-block text-white"><a href="cadastro-2.html"id="botao-continuar" required>Continuar</a></div>
+                    <div class="mt-10 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><a href="cadastro-2.html"id="botao-continuar" required>Continuar</a></div>
                     
                 </form>
             </div>
