--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -5,40 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <link href="./output.css" rel="stylesheet">
+    <link href="./input.css" rel="stylesheet">
+    
+    <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
 
 </head>
-<body>
+<body class="bg-amber-50 font-alexandria flex justify-center" >
     
-    <div class="container">
+    <div class="w-full h-full max-h-dvh flex justify-center">
 
-        <div class="image-container">
-            <img src="../img/fundo-1.png" alt="Imagem de exemplo">
+        <div>
+            <img class="w-full h-full" src="../img/fundo-1.png" alt="Imagem de exemplo">
         </div>
 
-        <div class="cadastro-container">
-            <div>
-                <a href="cadastro-1.html" id="voltar"><img src="../img/seta-voltar.png" alt=""></a>
+        <div class="w-[30%] bg-fundo1 p-14 flex justify-center">
+            <div>              
+                <p class="text-minitexto text-sm">Etapa 2 de 2</p>
 
-                <p class="texto-mini">Etapa 2 de 2</p>
+                <h1 class="text-[32px] min-w-[230px]">Criando Conta</h1>
 
-                <h1>Criando Conta</h1>
-
-                <p class="texto-mini">Já tem uma conta? <a href="login.html">Faça login aqui</a></p>
+                <p class="text-minitexto text-sm">Já tem uma conta? <a class="text-links font-bold" href="login.html">Entrar</a></p>
 
                 <form id="cadastroForm" action="/submit" method="POST">
 
-                    <p class="texto-1">Email</p>
-                    <input type="email" id="email" name="email" placeholder="Email" required><br>
+                    <p class="mt-10 mb-1">Email</p>
+                    <input class="bg-amber-50 indent-1 p-1  rounded-md mb-5" type="email" id="email" name="email" placeholder="Email" required><br>
 
-                    <p>Senha</p>
-                    <input type="password" id="senha" name="senha" placeholder="Senha" required><br>
+                    <p class="mt-4 mb-1">Senha</p>
+                    <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="password" id="senha" name="senha" placeholder="Senha" required><br>
 
-                    <p>Confirmar Senha</p>
-                    <input type="password" id="senha" name="senha" placeholder="Senha" required><br>
+                    <p class="mt-4 mb-1">Confirmar Senha</p>
+                    <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="password" id="senha" name="senha" placeholder="Confirmar" required><br>
                     <!-- Fazer com que o confirmar senha só permita cadastrar com as duas senhas sendo iguais -->
 
-                    <div class="mini-container"><button type="submit"id="botao-cadastrar">Cadastrar</button></div>
+                    <div class="mt-10 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><button type="submit"id="botao-cadastrar">Cadastrar</button></div>
+
+                    <a href="cadastro-1.html" id="voltar"><img class="w-10 mt-10 bg-amber-50" src="../img/right.png" alt=""></a>
                 </form>
             </div>
         </div>
