--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -7,6 +7,7 @@
     <title>Cadastro</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
     
     <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
 
@@ -39,9 +40,9 @@
                     <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="password" id="senha" name="senha" placeholder="Confirmar" required><br>
                     <!-- Fazer com que o confirmar senha só permita cadastrar com as duas senhas sendo iguais -->
 
-                    <div class="mt-10 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><button type="submit"id="botao-cadastrar">Cadastrar</button></div>
+                    <div class="mt-5 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><button type="submit"id="botao-cadastrar">Cadastrar</button></div> <br>
 
-                    <a href="cadastro-1.html" id="voltar"><img class="w-10 mt-10 bg-amber-50" src="../img/right.png" alt=""></a>
+                    <i class="fa-solid fa-arrow-left bg-destaque p-3 rounded-4xl mt-10" id=""></i>
                 </form>
             </div>
         </div>
