--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -40,7 +40,7 @@
                     <p class="mt-4 mb-1">Endereço</p>
                     <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="text" id="endereco" name="endereco" placeholder="Endereço" required> <br>
 
-                    <div class="mt-10 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><a href="cadastro-2.html"id="botao-continuar" required>Continuar</a></div>
+                    <div class="mt-10 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><a href="cadastro-2.html" required>Continuar</a></div>
                     
                 </form>
             </div>
