--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -40,7 +40,7 @@
                     <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="password" id="senha" name="senha" placeholder="Confirmar" required><br>
                     <!-- Fazer com que o confirmar senha só permita cadastrar com as duas senhas sendo iguais -->
 
-                    <div class="mt-5 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><button type="submit"id="botao-cadastrar">Cadastrar</button></div> <br>
+                    <div class="mt-5 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><button type="submit">Cadastrar</button></div> <br>
 
                     <i class="fa-solid fa-arrow-left bg-destaque p-3 rounded-4xl mt-10" id=""></i>
                 </form>
