--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -13,25 +13,30 @@
 </head>
 <body class="bg-amber-50 font-alexandria flex justify-center">
 
-    <div class="w-full h-full max-h-dvh flex justify-center">
+    <div class="xl:w-full h-full max-h-dvh flex justify-center">
 
-        <div>
+        <div class="min-w-2/3">
+            
             <img class="w-full h-full" src="../img/fundo-1.png" alt="Imagem de exemplo">
         </div>
         
 
 
-        <div class="w-[30%] bg-fundo1 p-14 flex justify-center">
+        <div class=" bg-fundo1 max-w-1/3 p-14 flex justify-center">
             <div>
-                <p class="text-minitexto text-sm" id="etapa">Etapa 1 de 2</p>
+                <p class="text-minitexto text-[1vw]" id="etapa">Etapa 1 de 2</p>
 
-                <h1 class="text-[32px] min-w-[230px]">Criando Conta</h1>
+                <h1 class="
+                text-2xl
+                lg:text-3xl lg:min-w-[230px]
+                xl:text-[32px] xl:min-w-[230px]">Criando Conta</h1>
 
                 <p class="text-minitexto text-sm">Já tem uma conta? <a class="text-links font-bold" href="login.html">Entrar</a></p>
 
                 <form id="cadastroForm" action="/submit" method="POST">
 
-                    <p class="mt-10 mb-1">Nome</p>
+                    <p class="
+                    mt-10 mb-1">Nome</p>
                     <input class="bg-amber-50 indent-1 p-1  rounded-md mb-5" type="text" id="nome" name="nome" placeholder="Nome Completo" required><br>
 
                     <p class="mt-4 mb-1">CPF ou CNPJ</p>
@@ -62,4 +67,3 @@
                     <option value="doador">Quero ser doador</option>
                     <option value="ajuda">Preciso de ajuda</option>
                 </select><br> -->
-
