--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -28,7 +28,7 @@
     <hr class="text-minitexto">
 
     <main class="px-30 h-screen flex items-center text-2xl">
-        <div class="">
+        <div>
             <section >
                 <h2 class="text-black text-5xl font-alfa mb-6">Canais de suporte</h2>
                 <p class="w-200 mb-4">Você também pode entrar em contato através dos seguintes canais:</p>
