Tela de Duvidas - tailwind

--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -27,10 +27,10 @@
 
     <hr class="text-minitexto">
 
-    <main class="px-30 h-screen flex items-center text-2xl">
+    <main class="px-30 py-20 flex items-center text-xl">
         <div>
             <section >
-                <h2 class="text-black text-5xl font-alfa mb-6">Canais de suporte</h2>
+                <h2 class="text-black text-4xl font-alfa mb-6">Canais de suporte</h2>
                 <p class="w-200 mb-4">Você também pode entrar em contato através dos seguintes canais:</p>
                 <ul>
                     <li class="text-2xl mb-4">Email: <strong class="text-black hover:underline hover:text-links">suporte@SAC.com</strong></li>
