--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -13,34 +13,38 @@
 </head>
 <body class="bg-amber-50 font-alexandria flex justify-center">
            
-    <div class="flex justify-center w-screen h-screen md:relative md:items-center">
-        <div class="lg:w-3/4 h-full">
-            <img class="h-full" src="../img/fundo-1.png" alt="Imagem de exemplo">
+    <div class="flex w-screen h-screen items-center flex-col lg:flex-row">
+
+        <div class="lg:w-3/4 lg:block h-full lg:order-1">
+            <picture>
+
+                <source media="(min-width: )" srcset="">
+
+                <img class="h-full" src="../img/fundo-1.png" alt="Imagem de exemplo">
+            </picture>
         </div>
 
-        <div class="bg-fundo1 p-10 md:pt-[-1000px] flex justify-center items-center w-1/4 md:@max-lgjustify-self-center md:@max-lg:absolute md:@max-lgw-100 md:@max-lgitems-center h-full"  >
+        <div class="bg-fundo1 p-10 flex justify-center items-center 
+        lg:w-1/4 lg:order-2 absolute lg:relative h-full w-100 lg:rounded-l-3xl @max-lg:rounded-t-4xl"  >
             <div>
                 <div>
                     <p class="text-minitexto text-sm" id="etapa">Etapa 1 de 2</p>
-                    <h1 class="
-                    text-2xl
-                    lg:text-3xl
-                    xl:text-[32px]">Criando Conta</h1>
+                    <h1 class="text-[32px]">Criando Conta</h1>
                     <p class="text-minitexto text-sm">Já tem uma conta? <a class="text-links font-bold" href="login.html">Entrar</a></p>
                     <form id="cadastroForm" action="/submit" method="POST">
                         <p class="
                         mt-10 mb-1">Nome</p>
-                        <input class="bg-amber-50 indent-1 p-1  rounded-md mb-5" type="text" id="nome" name="nome" placeholder="Nome Completo" required><br>
+                        <input class="bg-amber-50 indent-1 p-1  rounded-md mb-5 w-full" type="text" id="nome" name="nome" placeholder="Nome Completo" required><br>
                         <p class="mt-4 mb-1">CPF ou CNPJ</p>
-                        <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="text" name="cpf" id="cpf" placeholder="CPF/CNPJ" required>
+                        <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5 w-full" type="text" name="cpf" id="cpf" placeholder="CPF/CNPJ" required>
                         <p class="mt-4 mb-1">Endereço</p>
-                        <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5" type="text" id="endereco" name="endereco" placeholder="Endereço" required> <br>
+                        <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5 w-full" type="text" id="endereco" name="endereco" placeholder="Endereço" required> <br>
                         <div class="mt-10 px-4 py-3 bg-destaque rounded-xl inline-block text-white"><a href="cadastro-2.html" required>Continuar</a></div>
         
                     </form>
                 </div>
-            <div>
-        </div>
+            </div>
+        </div>  
     </div>
 
     <script src="crud.js"></script>
