--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -18,12 +18,13 @@
                 <picture>
                     <source class="w-full h-full object-cover" media="(min-width: 64rem)" srcset="../img/fundo-1.png">
 
-                    <img class="w-full h-full object-cover" src="../img/fundo-1-menor.png" alt="">
+                    <source class="w-full h-full object-cover" media="(min-width: 48rem)" srcset="../img/fundo-1-menor.png">
+                    
                 </picture>
             </div>
-            <div class="bg-fundo1  flex justify-center items-center p-8 
+            <div class="bg-fundo1  flex justify-center items-center px-8 pb-8 w-full h-full
 
-            lg:h-full lg:w-1/4
+            lg:h-full lg:w-1/4 
             
             xl:w-1/3  
 
