--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -21,14 +21,14 @@
                     <img class="w-full h-full object-cover max-sm:hidden" src="../img/top-view-heart-shape-with-copy-space.jpg" alt="">
                 </picture>
             </div>
-            <div class="bg-fundo1  flex justify-center items-center px-8 max-sm:w-full h-full
+            <div class="bg-fundo1  flex justify-center items-center px-8 max-sm:w-full max-sm:h-full
 
             lg:h-full lg:w-1/4
             
             xl:w-1/3  
 
             max-lg:absolute
-            min-sm:min-h-[calc(100vh-2rem)] max-lg:px-20 min-sm:max-lg:rounded-t-4xl">
+            min-h-[calc(100vh-2rem)] max-lg:px-20 min-sm:max-lg:rounded-t-4xl">
                 <div class="w-full max-w-md">
                     <div>
                         <p class="text-minitexto text-[clamp(0.875rem,1vw, 1rem)]" id="etapa">Etapa 1 de 2</p>
