--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -46,7 +46,6 @@
         
 
         <section>
-            
                 <h1 class="text-center text-4xl mt-15 mb-[-50px]publicadoB">Postagens mais importantes</h1>
 
                 <div class="w-vh h-dvh flex gap-5 items-center px-30 justify-center bg-amber-50 publiqueB">
@@ -82,6 +81,8 @@
                     </article>
                 </div>
         </section>
+
+        <!-- puxar do banco de dados as postagens acima -->
 
         <aside class="w-vw h-dvh bg-fundo2 flex items-center justify-center gap-10 px-30 flex-col rounded-4xl rounded-b-none">
                     <p class="text-[32px]  w-100 text-center blur-none duration-1000">Veja mais postagens e publique se cadastrando</p>
