--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -73,64 +73,64 @@
         </section>
 
         <section class="flex justify-center">
-            <div class="grid grid-cols-3 gap-20 py-8 pt-16">
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+            <div class="grid grid-cols-3 gap-20 py-8 pt-16 w-full">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
-                    <!-- fazer de uma maneira que essa urgencia seja a qe está no banco de dados -->
+                    <!-- puxar dados da postagem, imagem nome, urgencia, vir do banco de dados -->
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-amber-500 font-medium">Média</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-blue-600 font-medium">Baixa</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
                 </figure>
-                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl">
+                <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
                     <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
                     <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
                     <figcaption class="indent-2 pb-4">Urgência: <strong class="text-red-600 font-medium">Alta</strong></figcaption>
