--- a/Desenvolvimento Front-End/src/perfil.html
+++ b/Desenvolvimento Front-End/src/perfil.html
@@ -74,7 +74,7 @@
 
             </div>
 
-            <!-- mesma coisa de cima -->
+            <!-- mesma coisa de cima. -->
 
 
             <div class="flex justify-center ">
