--- a/Desenvolvimento Front-End/src/post.html
+++ b/Desenvolvimento Front-End/src/post.html
@@ -9,7 +9,11 @@
     <link href="./input.css" rel="stylesheet">
     
     <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
-
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body class="bg-amber-50 font-alexandria text-textos">
 
@@ -49,7 +53,48 @@
                 </div>
                 <div class="mb-4">
                     <label for="localizacao" class="block text-sm font-medium">Localização:</label>
-                    <input type="text" id="localizacao" class="w-full px-3 py-2 border rounded-lg" placeholder="Localização" required>
+                    <button type="button" id="toggleLocalizacaoBtn" class="w-full px-3 py-2 border rounded-lg bg-gray-100 hover:bg-gray-200">
+                        Inserir Localização
+                    </button>
+                    <div id="localizacaoContainer" class="hidden mt-4">
+                        <div class="mb-4">
+                            <label for="estado" class="block text-sm font-medium">Estado:</label>
+                            <select id="estado" class="w-full px-3 py-2 border rounded-lg">
+                                <option value="">Selecione o Estado</option>
+                                <option value="AC">Acre</option>
+                                <option value="AL">Alagoas</option>
+                                <option value="AP">Amapá</option>
+                                <option value="AM">Amazonas</option>
+                                <option value="BA">Bahia</option>
+                                <option value="CE">Ceará</option>
+                                <option value="DF">Distrito Federal</option>
+                                <option value="ES">Espírito Santo</option>
+                                <option value="GO">Goiás</option>
+                                <option value="MA">Maranhão</option>
+                                <option value="MT">Mato Grosso</option>
+                                <option value="MS">Mato Grosso do Sul</option>
+                                <option value="MG">Minas Gerais</option>
+                                <option value="PA">Pará</option>
+                                <option value="PB">Paraíba</option>
+                                <option value="PR">Paraná</option>
+                                <option value="PE">Pernambuco</option>
+                                <option value="PI">Piauí</option>
+                                <option value="RJ">Rio de Janeiro</option>
+                                <option value="RN">Rio Grande do Norte</option>
+                                <option value="RS">Rio Grande do Sul</option>
+                                <option value="RO">Rondônia</option>
+                                <option value="RR">Roraima</option>
+                                <option value="SC">Santa Catarina</option>
+                                <option value="SP">São Paulo</option>
+                                <option value="SE">Sergipe</option>
+                                <option value="TO">Tocantins</option>
+                            </select>
+                        </div>
+                        <div class="mb-4">
+                            <label for="casa" class="block text-sm font-medium">Lugar:</label>
+                            <input type="text" id="casa" class="w-full px-3 py-2 border rounded-lg" placeholder="Ex: Rua das Flores, 123" required>
+                        </div>
+                    </div>
                 </div>
                 <div class="mb-4">
                     <label for="urgencia" class="block text-sm font-medium">Urgência:</label>
@@ -62,6 +107,10 @@
                 <div class="mb-4">
                     <label for="descricao" class="block text-sm font-medium">Descrição:</label>
                     <textarea id="descricao" class="w-full px-3 py-2 border rounded-lg" placeholder="Descrição da postagem" required></textarea>
+                </div>
+                <div class="mb-4">
+                    <label for="imagem" class="block text-sm font-medium">Imagem:</label>
+                    <input type="file" id="imagem" class="w-full px-3 py-2 border rounded-lg" accept="image/*">
                 </div>
                 <div class="flex justify-end">
                     <button type="submit" class="px-4 py-2 bg-destaque text-white rounded-lg hover:bg-destaque-dark">Criar Postagem</button>
