--- a/Desenvolvimento Front-End/src/login.html
+++ b/Desenvolvimento Front-End/src/login.html
@@ -60,6 +60,6 @@
             </div>
         </div>
     </div>
-    <script src="login-1.js"></script>
+    <script src="./javascript/login-1.js"></script>
 </body>
 </html>
