--- a/Desenvolvimento Front-End/src/post.html
+++ b/Desenvolvimento Front-End/src/post.html
@@ -118,7 +118,7 @@
             </form>
         </section>
     </main>
-    <script src="javascript/criacaopost.js"></script>
+    <script src="../src/javascript/criacaopost.js"></script>
     
     <footer class="px-30 pt-10 pb-5 ">
 
