--- a/Desenvolvimento Front-End/src/perfil.html
+++ b/Desenvolvimento Front-End/src/perfil.html
@@ -31,7 +31,7 @@
 
                 <div class="flex gap-5 items-end w-full">
                     <div class="rounded-full  overflow-hidden w-35 h-35">
-                        <img class="object-cover w-full h-full" src="../img/image.png" alt="" width="50" height="50">
+                        <img id="imagem-perfil" class="object-cover w-full h-full" src="../img/image.png" alt="" width="50" height="50">
                     </div>
                     <!-- Foto de Perfil -->
                     <!-- Imagem do banco de dados da pessoa -->
@@ -71,7 +71,6 @@
                 <p class="text-xl text-minitexto">Filtrar: </p>
                 <button class="border-1 border-minitexto text-minitexto px-4 py-2 rounded-xl focus:bg-fundo2 focus:border-black focus:text-black">Recentes</button>
                 <button class="border-1 border-minitexto text-minitexto px-4 py-2 rounded-xl focus:bg-fundo2 focus:border-black focus:text-black">Antigas</button>
-
             </div>
 
             <!-- mesma coisa de cima. -->
