--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -27,11 +27,11 @@
 
     <hr class="text-minitexto">
 
-    <main class="px-30"></main>
+    <main class="px-30">
         <section>
             <h2 class="text-black text-5xl my-10 text-center">Postagens</h2>
 
-            <p class="text-minitexto indent-3">Filtros</p>
+            <p class="text-minitexto indent-2 mb-1">Filtros</p>
 
             <hr class="text-minitexto mx-[-2rem]">
 
@@ -71,7 +71,7 @@
                 <button class="px-2 py-1 bg-fundo2 text-black rounded-lg ml-2" type="submit">Filtrar</button>
             </form>
 
-            <div class="flex justify-center mt-4">
+            <div class="flex justify-center mt-20">
                 <a href="post.html" class="px-6 py-3 bg-destaque text-white rounded-lg hover:bg-destaque-dark">
                     Criar Postagens
                 </a>
