--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -46,40 +46,11 @@
         
 
         <section>
-                <h1 class="text-center text-4xl mt-15 mb-[-50px]publicadoB">Postagens mais importantes</h1>
+            <h1 class="text-center text-4xl mt-15 mb-[-50px]publicadoB">Postagens mais importantes</h1>
 
-                <div class="w-vh h-dvh flex gap-5 items-center px-30 justify-center bg-amber-50 publiqueB">
-                    <article class="flex flex-2 min-w-[50%]p-0">
-                        <div class="rounded-xl bg-fundo1">
-                            <img class="rounded-xl rounded-b-none" src="../img/21.jpg" alt="">
-                            <p class="indent-2 text-[40px] mt-10 mb-5">Titulo da postagem</p>
-                        </div>
-                    </article>
-
-                    <article class="flex flex-1 flex-col min-w-[25%] p-0 ">
-                        <div class="rounded-lg bg-fundo1 mb-4 publiqueB delay-300">
-                            <img class="rounded-lg rounded-b-none " src="../img/21.jpg" alt="">
-                            <p class="indent-2 text-[16px] mt-1 mb-2">Titulo da postagem</p>
-                        </div>
-
-                        <div class="rounded-lg bg-fundo1 publiqueB delay-600">
-                            <img class="rounded-lg rounded-b-none" src="../img/21.jpg" alt="">
-                            <p class="indent-2 text-[16px] mt-2 mb-2">Titulo da postagem</p>
-                        </div>
-                    </article>
-
-                    <article class="flex flex-1 flex-col min-w-[25%] p-0">
-                        <div class="rounded-lg bg-fundo1 mb-4 publiqueB delay-900">
-                            <img class="rounded-lg rounded-b-none" src="../img/21.jpg" alt="">
-                            <p class="indent-2 text-[16px] mt-2 mb-2">Titulo da postagem</p>
-                        </div>
-
-                        <div class="rounded-lg bg-fundo1 publiqueB delay-1200">
-                            <img class="rounded-lg rounded-b-none" src="../img/21.jpg" alt="">
-                            <p class="indent-2 text-[16px] mt-2 mb-2">Titulo da postagem</p>
-                        </div>
-                    </article>
-                </div>
+            <div class="w-vh h-dvh flex gap-5 items-center px-30 justify-center bg-amber-50 publiqueB" id="postagens-container">
+                <!-- As postagens serão carregadas dinamicamente pelo JavaScript -->
+            </div>
         </section>
 
         <!-- puxar do banco de dados as postagens acima -->
