--- a/Desenvolvimento Front-End/src/post.html
+++ b/Desenvolvimento Front-End/src/post.html
@@ -47,7 +47,7 @@
                 <div class="mb-4">
                     <label for="tipo" class="block text-sm font-medium">Tipo:</label>
                     <select id="tipo" class="w-full px-3 py-2 border rounded-lg" required>
-                        <option value="Doação">Doação</option>
+                        <option value="DOACAO">Doação</option>
                         <option value="Pedido">Pedido</option>
                     </select>
                 </div>
